tests/core/error/fts-offsets-2.rq
# Use multiple arguments in fts:offsets
SELECT (fts:offsets() AS ?off) { ?u fts:match 'a' }
